restructured scan class

--- a/uCT_analysis/load_scan_test.ipynb
+++ b/uCT_analysis/load_scan_test.ipynb
@@ -3,17 +3,18 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T20:33:30.368490Z",
-     "start_time": "2024-09-23T20:33:30.234790Z"
+     "end_time": "2024-09-24T10:23:05.807217Z",
+     "start_time": "2024-09-24T10:23:05.596835Z"
     }
    },
    "cell_type": "code",
    "source": [
     "import numpy as np\n",
+    "\n",
+    "from mt.ct_utils import show_in_napari\n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "import pyclesperanto as cle\n",
-    "from mt.ct_utils import show_in_napari, SegmentationSettings\n",
+    "import pandas as pd\n",
     "from mt.scan import Scan\n"
    ],
    "id": "235ed9c497739f47",
@@ -27,13 +28,13 @@
      ]
     }
    ],
-   "execution_count": 7
+   "execution_count": 12
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T20:33:34.713358Z",
-     "start_time": "2024-09-23T20:33:31.442272Z"
+     "end_time": "2024-09-24T10:21:00.088105Z",
+     "start_time": "2024-09-24T10:20:47.787222Z"
     }
    },
    "cell_type": "code",
@@ -50,45 +51,46 @@
      "text": [
       "Loading pickled Scan object from: ../../04_uCT/AD67/Scan.pkl\n",
       "Loading images from:  ../../04_uCT/AD67/Slices/\n",
-      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 2.80 s.\n",
-      "Loaded mask from: ../../04_uCT/AD67/segmentation.npy\n",
-      "Loaded particle mask from: ../../04_uCT/AD67/particle_mask.npy\n"
+      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 4.67 s.\n",
+      "Loaded _mask from: ../../04_uCT/AD67/_mask.npy\n",
+      "Loaded _particle_mask from: ../../04_uCT/AD67/_particle_mask.npy\n",
+      "Loaded _tesselation from: ../../04_uCT/AD67/_tesselation.npy\n"
      ]
     }
    ],
-   "execution_count": 8
+   "execution_count": 6
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T20:33:47.396816Z",
-     "start_time": "2024-09-23T20:33:46.749341Z"
+     "end_time": "2024-09-24T10:16:55.394400Z",
+     "start_time": "2024-09-24T10:16:44.366720Z"
     }
    },
    "cell_type": "code",
    "source": "scan.show(axis=\"z\")",
-   "id": "641c469f95f166cc",
+   "id": "4095474962baefed",
    "outputs": [],
-   "execution_count": 10
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T20:33:58.533258Z",
-     "start_time": "2024-09-23T20:33:57.518776Z"
+     "end_time": "2024-09-24T10:23:08.998560Z",
+     "start_time": "2024-09-24T10:23:08.803675Z"
     }
    },
    "cell_type": "code",
-   "source": "scan.show(particle_mask_only=True)",
-   "id": "4095474962baefed",
+   "source": "pd.to_pickle(scan.particle_statistics, scan.path + \"particle_statistics.pkl\")",
+   "id": "a99d1262b0257869",
    "outputs": [],
-   "execution_count": 11
+   "execution_count": 13
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-22T21:24:14.099651Z",
-     "start_time": "2024-09-22T21:23:58.766814Z"
+     "end_time": "2024-09-24T10:21:41.495154Z",
+     "start_time": "2024-09-24T10:21:05.824330Z"
     }
    },
    "cell_type": "code",
@@ -104,7 +106,20 @@
      ]
     }
    ],
-   "execution_count": 45
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-24T10:22:35.497175Z",
+     "start_time": "2024-09-24T10:22:31.802895Z"
+    }
+   },
+   "cell_type": "code",
+   "source": "scan.save()",
+   "id": "a2767fc8e790a017",
+   "outputs": [],
+   "execution_count": 10
   },
   {
    "metadata": {
