--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -6,44 +6,50 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-23T20:31:53.386646Z",
-     "start_time": "2024-09-23T20:31:51.428954Z"
+     "end_time": "2024-09-24T09:12:38.264240Z",
+     "start_time": "2024-09-24T09:12:36.352343Z"
     }
    },
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "\n",
-    "from mt.scan import *\n",
-    "cle.select_device(\"RTX\")"
+    "from mt.scan import Scan\n"
    ],
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    },
+    {
      "data": {
       "text/plain": [
-       "(OpenCL) NVIDIA GeForce RTX 4070 SUPER (OpenCL 3.0 CUDA)\n",
+       "(OpenCL) NVIDIA GeForce RTX 3060 Laptop GPU (OpenCL 3.0 CUDA)\n",
        "\tVendor:                      NVIDIA Corporation\n",
-       "\tDriver Version:              560.70\n",
+       "\tDriver Version:              516.95\n",
        "\tDevice Type:                 GPU\n",
-       "\tCompute Units:               56\n",
-       "\tGlobal Memory Size:          12281 MB\n",
-       "\tMaximum Object Size:         3070 MB\n",
-       "\tMax Clock Frequency:         2505 MHz\n",
+       "\tCompute Units:               30\n",
+       "\tGlobal Memory Size:          6143 MB\n",
+       "\tMaximum Object Size:         1535 MB\n",
+       "\tMax Clock Frequency:         1425 MHz\n",
        "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T20:31:57.364343Z",
-     "start_time": "2024-09-23T20:31:53.618883Z"
+     "end_time": "2024-09-24T09:12:01.692316Z",
+     "start_time": "2024-09-24T09:12:00.692284Z"
     }
    },
    "cell_type": "code",
@@ -56,18 +62,18 @@
    "id": "96cae9eb82305a89",
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading pickled Scan object from: ../../04_uCT/AD67/Scan.pkl\n",
-      "Loading images from:  ../../04_uCT/AD67/Slices/\n",
-      "Loaded stack with shape (1781, 126, 2231) and a size of 1.00 GB in 1.92 s.\n",
-      "Loaded mask from: ../../04_uCT/AD67/segmentation.npy\n",
-      "Loaded particle mask from: ../../04_uCT/AD67/particle_mask.npy\n"
+     "ename": "NameError",
+     "evalue": "name 'Scan' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 2\u001B[0m\n\u001B[0;32m      1\u001B[0m path \u001B[38;5;241m=\u001B[39m \u001B[38;5;124m\"\u001B[39m\u001B[38;5;124m../../04_uCT/AD67/\u001B[39m\u001B[38;5;124m\"\u001B[39m\n\u001B[1;32m----> 2\u001B[0m scan \u001B[38;5;241m=\u001B[39m Scan(path,\n\u001B[0;32m      3\u001B[0m             discard_ends\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n\u001B[0;32m      4\u001B[0m scan\u001B[38;5;241m.\u001B[39mload(logging\u001B[38;5;241m=\u001B[39m\u001B[38;5;28;01mTrue\u001B[39;00m)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'Scan' is not defined"
      ]
     }
    ],
-   "execution_count": 2
+   "execution_count": 1
   },
   {
    "metadata": {
@@ -151,24 +157,11 @@
    "source": [
     "scan.segment()\n",
     "scan.segment_particles()\n",
-    "scan."
+    "scan.voronoi_tesselation()"
    ],
    "id": "79d8e60c9d04799e",
    "outputs": [],
    "execution_count": 7
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-09-23T20:32:43.635085Z",
-     "start_time": "2024-09-23T20:32:32.427291Z"
-    }
-   },
-   "cell_type": "code",
-   "source": "",
-   "id": "3ad5eaab50af2f6b",
-   "outputs": [],
-   "execution_count": 8
   },
   {
    "metadata": {
