--- a/uCT_analysis/test.ipynb
+++ b/uCT_analysis/test.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-24T11:50:08.550152Z",
-     "start_time": "2024-09-24T11:50:03.428913Z"
+     "end_time": "2024-09-24T12:28:59.086804Z",
+     "start_time": "2024-09-24T12:28:54.188170Z"
     }
    },
    "cell_type": "code",
@@ -19,17 +19,36 @@
     "from mt.utils import print_image_info\n",
     "from mt.ct_utils import contact_area\n",
     "\n",
-    "# cle.select_device(\"RTX\")"
+    "cle.select_device(\"RTX\")"
    ],
    "id": "5a8e0960d0c7bf84",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(OpenCL) NVIDIA GeForce RTX 3060 Laptop GPU (OpenCL 3.0 CUDA)\n",
+       "\tVendor:                      NVIDIA Corporation\n",
+       "\tDriver Version:              516.95\n",
+       "\tDevice Type:                 GPU\n",
+       "\tCompute Units:               30\n",
+       "\tGlobal Memory Size:          6143 MB\n",
+       "\tMaximum Object Size:         1535 MB\n",
+       "\tMax Clock Frequency:         1425 MHz\n",
+       "\tImage Support:               Yes"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "execution_count": 1
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-24T11:50:10.210535Z",
-     "start_time": "2024-09-24T11:50:08.557761Z"
+     "end_time": "2024-09-24T12:29:01.223877Z",
+     "start_time": "2024-09-24T12:28:59.192394Z"
     }
    },
    "cell_type": "code",
@@ -61,37 +80,26 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-24T12:02:01.186661Z",
-     "start_time": "2024-09-24T12:01:58.474076Z"
+     "end_time": "2024-09-24T12:29:01.595941Z",
+     "start_time": "2024-09-24T12:29:01.590280Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "viewer = napari.Viewer()\n",
-    "viewer.add_labels(tess_slice)\n",
-    "viewer.add_labels(part_slice)\n",
-    "viewer.add_labels(mask_slice)"
+    "# viewer = napari.Viewer()\n",
+    "# viewer.add_labels(tess_slice)\n",
+    "# viewer.add_labels(part_slice)\n",
+    "# viewer.add_labels(mask_slice)"
    ],
    "id": "93cfe58a4093a241",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "<Labels layer 'mask_slice' at 0x1d22de93910>"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "execution_count": 18
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-24T11:53:44.651225Z",
-     "start_time": "2024-09-24T11:53:44.628752Z"
+     "end_time": "2024-09-24T12:33:00.379212Z",
+     "start_time": "2024-09-24T12:33:00.366291Z"
     }
    },
    "cell_type": "code",
@@ -160,13 +168,13 @@
    ],
    "id": "c6a69d2b6e2fd653",
    "outputs": [],
-   "execution_count": 7
+   "execution_count": 20
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-24T11:59:43.451845Z",
-     "start_time": "2024-09-24T11:59:06.965871Z"
+     "end_time": "2024-09-24T12:33:06.669583Z",
+     "start_time": "2024-09-24T12:33:04.257204Z"
     }
    },
    "cell_type": "code",
@@ -185,14 +193,6 @@
      "output_type": "stream",
      "text": [
       "Region size:  (540, 743)\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\malte\\anaconda3\\envs\\thesis\\Lib\\site-packages\\skimage\\_shared\\utils.py:438: UserWarning: This might be a color image. The histogram will be computed on the flattened image. You can instead apply this function to each color channel, or set channel_axis.\n",
-      "  return func(*args, **kwargs)\n"
      ]
     },
     {
@@ -230,16 +230,6 @@
      ]
     },
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\malte\\anaconda3\\envs\\thesis\\Lib\\site-packages\\numpy\\_core\\fromnumeric.py:3596: RuntimeWarning: Mean of empty slice.\n",
-      "  return _methods._mean(a, axis=axis, dtype=dtype,\n",
-      "C:\\Users\\malte\\anaconda3\\envs\\thesis\\Lib\\site-packages\\numpy\\_core\\_methods.py:138: RuntimeWarning: invalid value encountered in scalar divide\n",
-      "  ret = ret.dtype.type(ret / rcount)\n"
-     ]
-    },
-    {
      "data": {
       "text/plain": [
        "<Figure size 1500x700 with 4 Axes>"
@@ -250,13 +240,13 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 15
+   "execution_count": 21
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-24T12:03:45.232300Z",
-     "start_time": "2024-09-24T12:03:44.571562Z"
+     "end_time": "2024-09-24T12:33:16.053181Z",
+     "start_time": "2024-09-24T12:33:15.689394Z"
     }
    },
    "cell_type": "code",
@@ -278,7 +268,7 @@
        "Text(0, 0.5, 'Polymer contact percentage')"
       ]
      },
-     "execution_count": 21,
+     "execution_count": 22,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -293,7 +283,7 @@
      "output_type": "display_data"
     }
    ],
-   "execution_count": 21
+   "execution_count": 22
   }
  ],
  "metadata": {
