added show_nb function and workflow for nesh

--- a/laser/function_generator_plots.ipynb
+++ b/laser/function_generator_plots.ipynb
@@ -6,8 +6,8 @@
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-09-23T14:04:13.569617Z",
-     "start_time": "2024-09-23T14:04:12.055498Z"
+     "end_time": "2024-09-30T11:07:36.796455Z",
+     "start_time": "2024-09-30T11:07:34.555732Z"
     }
    },
    "source": [
@@ -24,8 +24,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T14:04:13.671777Z",
-     "start_time": "2024-09-23T14:04:13.575247Z"
+     "end_time": "2024-09-30T11:07:36.949391Z",
+     "start_time": "2024-09-30T11:07:36.804466Z"
     }
    },
    "cell_type": "code",
@@ -48,8 +48,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T14:04:14.123234Z",
-     "start_time": "2024-09-23T14:04:13.702402Z"
+     "end_time": "2024-09-30T11:07:37.586451Z",
+     "start_time": "2024-09-30T11:07:36.995976Z"
     }
    },
    "cell_type": "code",
@@ -91,8 +91,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T14:04:14.420609Z",
-     "start_time": "2024-09-23T14:04:14.143479Z"
+     "end_time": "2024-09-30T11:07:38.049551Z",
+     "start_time": "2024-09-30T11:07:37.622042Z"
     }
    },
    "cell_type": "code",
@@ -154,14 +154,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-23T14:04:14.533832Z",
-     "start_time": "2024-09-23T14:04:14.447618Z"
+     "end_time": "2024-09-30T14:27:34.512789Z",
+     "start_time": "2024-09-30T14:27:34.403559Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "on = 0.005 # s\n",
-    "off = on*2 # s\n",
+    "on = 0.16 # s\n",
+    "off = 0.08 # s\n",
     "passes = 10\n",
     "\n",
     "\n",
@@ -174,24 +174,24 @@
      "output_type": "stream",
      "text": [
       "Settings:\n",
-      "Set on time: 5 ms\n",
-      "Set off time: 10 ms\n",
+      "Set on time: 160 ms\n",
+      "Set off time: 80 ms\n",
       "Cycles: 10\n",
       "--------------------\n",
-      "Speed: 16.1 mm/s\n",
-      "Frequency: 66.80 Hz\n",
-      "Duty cycle: 33 %\n",
-      "Total time over spot: 0.15 s\n",
-      "Equivalent energy: 0.32 J/mm^2\n",
+      "Speed: 1.0 mm/s\n",
+      "Frequency: 4.15 Hz\n",
+      "Duty cycle: 67 %\n",
+      "Total time over spot: 2.41 s\n",
+      "Equivalent energy: 10.26 J/mm^2\n",
       "--------------------\n",
-      "Actual on time: 5 ms\n",
-      "Total on time: 50 ms\n",
-      "Actual off time: 10 ms\n",
-      "Total off time: 100 ms\n"
+      "Actual on time: 161 ms\n",
+      "Total on time: 1607 ms\n",
+      "Actual off time: 80 ms\n",
+      "Total off time: 803 ms\n"
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 15
   }
  ],
  "metadata": {
