--- a/uCT_analysis/segment_scan_test.ipynb
+++ b/uCT_analysis/segment_scan_test.ipynb
@@ -13,7 +13,8 @@
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2\n",
-    "from mt.scan import Scan\n"
+    "from mt.scan import Scan\n",
+    "from mt.ct_utils import SegmentationSettings\n"
    ],
    "outputs": [
     {
@@ -113,9 +114,6 @@
     "particle_settings = SegmentationSettings(particle_mask_sigma=0.8,\n",
     "                                particle_n_erosions=7,\n",
     "                                particle_enlarge_radius=1)\n",
-    "scan.set_particle_segmentation_settings(particle_settings)\n",
-    "print(scan.particle_segmentation_settings)\n",
-    "\n",
     "general_settings = SegmentationSettings(air_mask_sigma=0.6,\n",
     "                                air_n_erosions=2,\n",
     "                                contrast_min_percentile=0,\n",
@@ -124,8 +122,8 @@
     "                                particle_n_erosions=2,\n",
     "                                particle_enlarge_radius=1,\n",
     "                                smooth_labels_radius=2)\n",
-    "scan.set_segmentation_settings(general_settings)\n",
-    "print(scan.segmentation_settings)"
+    "scan.set_particle_segmentation_settings(particle_settings)\n",
+    "scan.set_segmentation_settings(general_settings)"
    ],
    "id": "311bb33242bdf9c0",
    "outputs": [
