--- a/uCT_analysis/test.ipynb
+++ b/uCT_analysis/test.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-24T12:28:59.086804Z",
-     "start_time": "2024-09-24T12:28:54.188170Z"
+     "end_time": "2024-09-25T14:46:04.696126Z",
+     "start_time": "2024-09-25T14:46:04.024151Z"
     }
    },
    "cell_type": "code",
@@ -14,9 +14,7 @@
     "import skimage\n",
     "import napari\n",
     "import pyclesperanto as cle\n",
-    "from dask.array.reshape import contract_tuple\n",
     "\n",
-    "from mt.utils import print_image_info\n",
     "from mt.ct_utils import contact_area\n",
     "\n",
     "cle.select_device(\"RTX\")"
@@ -37,18 +35,45 @@
        "\tImage Support:               Yes"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 1
+   "execution_count": 3
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-24T12:29:01.223877Z",
-     "start_time": "2024-09-24T12:28:59.192394Z"
+     "end_time": "2024-09-25T14:45:56.873760Z",
+     "start_time": "2024-09-25T14:45:56.859509Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "cle.list_available_backends()\n",
+    "# cle.select_backend(\"cuda\")"
+   ],
+   "id": "d9a542da1b45b47d",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['opencl']"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "execution_count": 2
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-09-25T10:23:21.997290Z",
+     "start_time": "2024-09-25T10:23:18.476043Z"
     }
    },
    "cell_type": "code",
@@ -78,21 +103,40 @@
    "execution_count": 2
   },
   {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": "",
+   "id": "14574873f547c483"
+  },
+  {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-09-24T12:29:01.595941Z",
-     "start_time": "2024-09-24T12:29:01.590280Z"
+     "end_time": "2024-09-25T10:23:34.697329Z",
+     "start_time": "2024-09-25T10:23:22.968252Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "# viewer = napari.Viewer()\n",
-    "# viewer.add_labels(tess_slice)\n",
-    "# viewer.add_labels(part_slice)\n",
-    "# viewer.add_labels(mask_slice)"
+    "viewer = napari.Viewer()\n",
+    "viewer.add_labels(tess_slice)\n",
+    "viewer.add_labels(part_slice)\n",
+    "viewer.add_labels(mask_slice)"
    ],
    "id": "93cfe58a4093a241",
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Labels layer 'mask_slice' at 0x22872187e10>"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "execution_count": 3
   },
   {
