created segmentation workflow

--- a/uCT_analysis/workflow.ipynb
+++ b/uCT_analysis/workflow.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-19T12:45:15.858574Z",
-     "start_time": "2024-10-19T12:45:12.706773Z"
+     "end_time": "2024-10-20T23:09:19.870181Z",
+     "start_time": "2024-10-20T23:09:18.354980Z"
     }
    },
    "cell_type": "code",
@@ -16,7 +16,7 @@
    ],
    "id": "dcc92dd7cbbf9bc7",
    "outputs": [],
-   "execution_count": 1
+   "execution_count": 2
   },
   {
    "metadata": {
@@ -27,7 +27,7 @@
    },
    "cell_type": "code",
    "source": [
-    "path = \"../../04_uCT/BA09/\"\n",
+    "path = \"../../04_uCT/AD48/\"\n",
     "scan = Scan(path)\n",
     "scan.load(logging=True)"
    ],
@@ -50,8 +50,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-10-19T12:45:27.856262Z",
-     "start_time": "2024-10-19T12:45:26.456055Z"
+     "end_time": "2024-10-20T23:09:13.644037Z",
+     "start_time": "2024-10-20T23:09:13.069004Z"
     }
    },
    "cell_type": "code",
@@ -60,9 +60,7 @@
     "                                         particle_n_erosions=7,\n",
     "                                         particle_enlarge_radius=1)\n",
     "general_settings = SegmentationSettings(air_mask_sigma=0.6,\n",
-    "                                        air_n_erosions=2,\n",
-    "                                        contrast_min_percentile=0,\n",
-    "                                        contrast_max_percentile=9,\n",
+    "                                        air_thresh=255*2**8,\n",
     "                                        particle_mask_sigma=0.2,\n",
     "                                        particle_n_erosions=2,\n",
     "                                        particle_enlarge_radius=1,\n",
@@ -71,8 +69,20 @@
     "scan.set_segmentation_settings(general_settings)"
    ],
    "id": "ebc222c2d8cbcc92",
-   "outputs": [],
-   "execution_count": 3
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'SegmentationSettings' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001B[1;31m---------------------------------------------------------------------------\u001B[0m",
+      "\u001B[1;31mNameError\u001B[0m                                 Traceback (most recent call last)",
+      "Cell \u001B[1;32mIn[1], line 1\u001B[0m\n\u001B[1;32m----> 1\u001B[0m particle_settings \u001B[38;5;241m=\u001B[39m SegmentationSettings(particle_mask_sigma\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.8\u001B[39m,\n\u001B[0;32m      2\u001B[0m                                          particle_n_erosions\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m7\u001B[39m,\n\u001B[0;32m      3\u001B[0m                                          particle_enlarge_radius\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m)\n\u001B[0;32m      4\u001B[0m general_settings \u001B[38;5;241m=\u001B[39m SegmentationSettings(air_mask_sigma\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.6\u001B[39m,\n\u001B[0;32m      5\u001B[0m                                         air_thresh\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m255\u001B[39m\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m2\u001B[39m\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m*\u001B[39m\u001B[38;5;241m8\u001B[39m,\n\u001B[0;32m      6\u001B[0m                                         particle_mask_sigma\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m0.2\u001B[39m,\n\u001B[0;32m      7\u001B[0m                                         particle_n_erosions\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m2\u001B[39m,\n\u001B[0;32m      8\u001B[0m                                         particle_enlarge_radius\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m1\u001B[39m,\n\u001B[0;32m      9\u001B[0m                                         smooth_labels_radius\u001B[38;5;241m=\u001B[39m\u001B[38;5;241m2\u001B[39m)\n\u001B[0;32m     10\u001B[0m scan\u001B[38;5;241m.\u001B[39mset_particle_segmentation_settings(particle_settings)\n",
+      "\u001B[1;31mNameError\u001B[0m: name 'SegmentationSettings' is not defined"
+     ]
+    }
+   ],
+   "execution_count": 1
   },
   {
    "metadata": {
@@ -84,8 +94,8 @@
    "cell_type": "code",
    "source": [
     "scan.segment()\n",
-    "scan.segment_particles()\n",
-    "scan.voronoi_tesselation()"
+    "# scan.segment_particles()\n",
+    "# scan.voronoi_tesselation()"
    ],
    "id": "436988b412cc37d6",
    "outputs": [
